styles.css
/* ... */
.copy-input-container {
  border-bottom: 2px solid #d3dae3;
  display: flex;
  padding-bottom: 2.9rem;
}

.copy-input-container-3 {
  display: flex;
  padding-bottom: 2.9rem;
}

input.copy-input {
  padding-right: 2.6rem;
}

input[type="text"] {
  border: none;
  border-radius: 6px;
  height: 3rem;
  width: 85%;
}

input[type="text"]::placeholder {
  font-size: .85rem;
  font-weight: 700;
  padding-left: 1rem;
}

.copy-button {
  background-color: #55bac1;
  border-radius: 4px;
  color: #e7f5f7;
  font-size: .85rem;
  margin-right: .5rem;
  padding: 0 1rem 0 1rem;
}

@media screen and (max-width: 1199px) {
  .sidebar-left {
    display: none;
  }
  .search-area-container {
    width: 100vw;
  }  
  .job-share-container {
    padding-top: .5rem;
  }
  .description-content {
    padding: 0 1rem 0 1rem;
  }
  .search-area-container {
    width: 100%;
  }
  .playlist-area-icon {
    display: none;
  }
  .playlist-icon-after {
    display: block;
    height: 1.7rem;
    width: 1.7rem;
  }
}

@media screen and (max-width: 1025px) {
  .social-media-container {
    margin-right: 2rem;
  }
  .social-media-text {
    padding-left: 1.5rem;
  }
  .job-share-container {
    padding-top: .2rem;
  }
  .job-share-title {
    font-size: 1rem;
  }
  .search-icon-container {
  width: 9.5%;
  }
  .hamburger-icon-container {
    width: 9.5%;
  }
  .summary-text-icon {
    font-size: .75rem;
    margin-right: 2rem;
  }
  .bar-graph {
    height: 25vh;
  }
  .job-description-header {
    padding-right: .4rem;
  }  
}  

@media screen and (max-width: 860px) {
  h2 {
    font-size: 1.5rem;
  }
  select {
    display: block;
    font-size: 1rem;
    margin: 1.5rem auto 1.5rem auto;
  }
  .search-area-container {
    height: 9.5vh;
  }
  .middle-job-title-container {
    font-size: .9rem;
  }
  .bottom-job-title-container {
    display: none;
  }
  .search-icon-container {
    width: 9%;
  }
  .hamburger-icon-container {
    width: 9%;
  }
  .magnifying-glass-icon {
    margin-top: 1.75rem;
  }
  .search-area-icon, .playlist-icon-after {
    height: 1.4rem;
    width: 1.4rem;
  }
  ::placeholder {
    font-size: 1rem;
  }
  .graph-container {
    flex-wrap: wrap;
    justify-content: center;
    padding-left: 0;
  }
  .single-chart {
    width: 32%;
  }
  .bar-graph {
    height: 38vh;
    margin: 3rem 0 0 0;
  }
  .job-description-container {
    width: 85%;
  }
  .job-description-header {
    justify-content: center;
    margin: 0;
    padding-right: 0;
  }
  .job-content-container, .circular-chart {
    margin: 0;
  }
  .description-content-container {
    margin: 0;
  }
  .description-content {
    padding-left: 0;
  }
  .job-description-text, .job-edit-text, .job-description-title-text {
    font-size: .85rem;
  }
  .social-media-container {
    margin: 0 0 0 .75rem;
    width: 85%;
  }
  .facebook-container, .twitter-container, .linkedin-container {
    justify-content: center;
  }
  .job-social-container {
    align-items: center;
    flex-direction: column;
  }
  .social-media-icon {
    padding-left: 0;
  }
  .social-media-text {
    padding-left: .65rem;
    font-size: .9rem;
  }
  input[type="text"] {
  width: 100%;
  }
  input.copy-input {
  padding-right: 4.3rem;
  }
}  

@media screen and (max-width: 769px) {
  .job-description-header {
    padding-right: .2rem;
  }
  .open-delete-icons {
    display: none;
  }
  .open-delete-icons-mobile {
    align-items: flex-end;
    display: flex;
    justify-content: flex-end;
  }
  .job-description-container {
    margin-bottom: 2rem;
  }
  .four-dots-icon {
    height: 1.7rem;
    width: 1.7rem;
  }
  .search-icon-container {
    width: 10%;
  }
  .hamburger-icon-container {
    width: 10%;
  }
}  

@media screen and (max-width: 660px) {
  .bar-graph {
    height: 30vh;
  }
  .job-description-container {
    margin-bottom: 3.5rem;
  }
  .job-description-header {
    padding-right: .5rem;
  }
  .graph-container {
    justify-content: space-around;
  }
  .search-icon-container {
    width: 12%;
  }
  .hamburger-icon-container {
    width: 12%;
  }
  .left-totals-button {
    display: none;
  }
  .right-applicant-button {
    display: none;
  }
  .mobile-stats-button {
    background-color: #fafafc;
    border-radius: 20px;
    border: 2.2px solid #d3dae3;
    color: #616d80;
    display: flex;
    font-size: .85rem;
    font-weight: 600;
    padding: .5rem 1.3rem;
  }
   .left-line-show-more, .right-line-show-more {
    width: 25%;
  }
}  

@media screen and (max-width: 560px) {
  .bar-graph {
    height: 25vh;
  }
  .playlist-icon-after {
    height: 1.2rem;
    width: 1.2rem;
  }
  .search-area-icon {
    height: 1.2rem;
    width: 1.2rem;
  }
  ::placeholder {
    font-size: .85rem;
  }
  .magnifying-glass-icon {
    height: 1.1rem;
    margin-top: 1.5rem;
    width: 1.1rem;
  }
   .search-area-container {
    height: 8vh;
  }
  .job-description-header {
    padding-right: .75rem;
  }
  .job-description-container {
    margin-bottom: -7rem;
  }
  .description-content {
    display: none;
  }
  .description-button-mobile {
    border-radius: 4px;
    display: block;
    padding: 0 1rem 0 1rem;
  }  
  .description-content-mobile {
    color: #848e9c;
    display: block;
    font-weight: 600;
  }
  .show-more-button {
    height: 2rem;
    width: 2rem;
  }
}
/* ... */

